# zodchy-fastapi

./: .gitignore  README.md  pyproject.toml
examples/: test.py
src/zodchy_fastapi/: __init__.py  factory.py  middleware.py  request.py  response.py  routing.py  serializing.py
src/zodchy_fastapi/definition/: __init__.py  contracts.py
src/zodchy_fastapi/definition/schema/: __init__.py  request.py  response.py
src/zodchy_fastapi/patterns/: __init__.py  interceptors.py
src/zodchy_fastapi/routing/: __init__.py  endpoint.py  registry.py  router.py
tests/: test_factory.py  test_interceptors.py  test_middleware.py  test_registry.py  test_request.py  test_response.py  test_routing.py  test_serializer.py  test_serializing.py
zodchy_fastapi/: __init__.py  application.py  contracts.py  handlers.py  router.py
zodchy_fastapi/adapters/: __init__.py  exceptions.py  query.py  request.py  response.py
zodchy_fastapi/contracts/: __init__.py  request.py  response.py  tools.py
zodchy_fastapi/endpoints/: __init__.py  api.py
zodchy_fastapi/handlers/: __init__.py  pancho.py
zodchy_fastapi/internal/: contracts.py
zodchy_fastapi/middleware/: __init__.py  exceptions.py  handlers.py  security.py
zodchy_fastapi/parsers/: __init__.py  requests.py
zodchy_fastapi/request/: __init__.py  adapter.py  schema.py
zodchy_fastapi/response/: __init__.py  adapter.py  schema.py
zodchy_fastapi/routers/: __init__.py  api.py
zodchy_fastapi/routing/: __init__.py  schema.py
zodchy_fastapi/schema/: __init__.py  request.py  response.py  route.py
zodchy_fastapi/wrappers/: __init__.py  request.py  response.py
