[tool.poetry]
name = "zodchy-fastapi"
version = "0.3.2"
description = "Collection of tools to integrate fastapi to zodchy architecture"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-fastapi"
packages = [{ include = "zodchy_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.2.3"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"