[tool.poetry]
name = "zodchy-fastapi"
version = "0.6.0"
description = "Collection of tools to integrate fastapi to zodchy architecture"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-fastapi"
packages = [{ include = "zodchy_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.5.4"
fastapi = ">=0.*"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy= "^1.11.1"

[tool.mypy]
disable_error_code = "import-untyped"